editors/tree-sitter-pika/grammar.js
    source_file: $ => statements($, $._statement),

    // ----- Statements --------------------------------------------------------------------------

    _statement: $ => choice($.block, $._command),

    block: $ => seq('{', statements($, $._statement), '}'),

    variable_declaration: $ => seq(
      field('kind', choice(':local', ':const', ':global')),
      field('name', $.identifier),
      optional(seq(imm(':'), field('type', $._type))),
      optional(field('value', $._atom)),
    ),

    if_statement: $ => prec.right(seq(
      ':if',
      field('condition', $.parenthesized_expression),
      'do', imm('='), field('body', $.block),
      optional(seq('else', imm('='), field('alternative', choice($.block, $.if_statement)))),
    )),

    match_statement: $ => seq(
      ':match',
      field('value', $._atom),
      field('body', $.match_body),
    ),

    match_body: $ => seq('{', statements($, $.match_arm), '}'),

    match_arm: $ => seq(
      field('pattern', $._pattern),
      optional(seq('if', imm('='), field('guard', $.parenthesized_expression))),
      'do', imm('='), field('body', $.block),
    ),

    call: $ => callRule($, $._head_atom),

    // Inside `[ ]` and `$[ ]`, any atom can be the head, including a collection literal; at the
    // start of a statement, `{` always starts a block.
    _bracketed_command: $ => choice($._form, alias($._bracketed_call, $.call)),

    _atom: $ => choice($._primary, $.collection_literal, $.member_expression),

    // The atoms that can start a statement: every atom except a collection literal, which
    // would be a block there.
    _head_atom: $ => choice($._primary, alias($._head_member_expression, $.member_expression)),

    _type_head: $ => choice(alias($.identifier, $.type_identifier), $.self_type),

    member_expression: $ => memberRule($, choice($._atom, $._type_head)),

    command_substitution: $ => seq('[', $._bracketed_command, ']'),

    parenthesized_expression: $ => seq(
      '(',
      $._expression,
      // Tuples are reserved; the reference parser reports them.
      repeat(seq(',', $._expression)),
      ')',
    ),

    _expression: $ => choice(
      $._atom,
      $.unary_expression,
      $.binary_expression,
      $.cast_expression,
    ),

    unary_expression: $ => prec(PREC.unary, seq(
      field('operator', choice('-', '!', '~')),
      field('operand', $._expression),
    )),

    binary_expression: $ => {
      const table = [
        [PREC.or, choice('or', '||')],
        [PREC.and, choice('and', '&&')],
        [PREC.comparison, choice('=', '!=', '<', '<=', '>', '>=', 'in')],
        [PREC.concat, '.'],
        [PREC.bit_or, '|'],
        [PREC.bit_xor, '^'],
        [PREC.bit_and, '&'],
        [PREC.shift, choice('<<', '>>')],
        [PREC.additive, choice('+', '-')],
        [PREC.multiplicative, choice('*', '/', '%')],
      ];
      return choice(...table.map(([precedence, operator]) => prec.left(precedence, seq(
        field('left', $._expression),
        field('operator', operator),
        field('right', $._expression),
      ))));
    },

    cast_expression: $ => prec.left(PREC.cast, seq(
      field('value', $._expression),
      'as',
      field('type', $._type),
    )),

    // `{1; 2}`, `{"a"=1}`
    collection_literal: $ => seq('{', statements($, $._element), '}'),

    // `Point{x=1.0; y=2.0}`, `List<i64>{}`, `/geo/Point{...}`
    typed_literal: $ => seq(
      field('type', choice($._type_head, $.path, $.generic_type)),
      imm('{'),
      statements($, $._element),
      '}',
    ),

    _element: $ => choice($._atom, $.map_entry, $.field_initializer),

    map_entry: $ => seq(field('key', $._atom), '=', field('value', $._atom)),

    field_initializer: $ => seq(
      field('name', alias($._argument_name, $.identifier)),
      imm('='),
      field('value', $._atom),
    ),

    // `/std/math/sqrt`: every `/` and name are joined.
    path: $ => seq(
      '/',
      alias(imm(IDENTIFIER), $.identifier),
      repeat(seq(imm('/'), alias(imm(IDENTIFIER), $.identifier))),
    ),

    variable: _ => /\$[A-Za-z_][A-Za-z0-9_]*/,

    // ----- Literals ----------------------------------------------------------------------------

    integer: _ => token(seq(optional('-'), choice(
      /[0-9][0-9_]*/,
      /0x[0-9A-Fa-f_]+/,
      /0o[0-7_]+/,
      /0b[01_]+/,
    ))),

    float: _ => token(seq(optional('-'), choice(
      /[0-9][0-9_]*\.[0-9][0-9_]*([eE][+-]?[0-9][0-9_]*)?/,
      /[0-9][0-9_]*[eE][+-]?[0-9][0-9_]*/,
    ))),

    // `500ms`, `1m30s`, `1d12h`. Like the reference lexer, everything after the first unit that
    // could continue a name belongs to the literal.
    duration: _ => token(seq(optional('-'), /[0-9][0-9_]*(ns|us|ms|[wdhms])[0-9A-Za-z_]*/)),

    char: _ => token(seq(
      '\'',
      choice(
        /[^'\\\r\n]/,
        /\\u\{[0-9A-Fa-f]*\}/,
        /\\x[0-9A-Fa-f]{2}/,
        /\\[^\r\n]/,
      ),
      '\'',
    )),

    boolean: _ => choice('true', 'false'),

    none: _ => 'none',

    string: $ => seq(
      '"',
      repeat(choice($.string_content, $.escape_sequence, $.interpolation)),
      '"',
    ),

    escape_sequence: _ => imm(prec(1, seq(
      '\\',
      choice(
        /u\{[0-9A-Fa-f]*\}/,
        /x[0-9A-Fa-f]{2}/,
        // A line continuation: the line break and the indentation after it are removed.
        /\r?\n[ \t]*/,
        /[^\r\n]/,
      ),
    ))),

    // `$name`, `$(expression)` or `$[command]` inside a string.
    interpolation: $ => choice(
      $.variable,
      seq('$(', $._expression, ')'),
      seq('$[', $._bracketed_command, ']'),
    ),

    // ----- Types -------------------------------------------------------------------------------

    _type: $ => choice(
      alias($.identifier, $.type_identifier),
      $.self_type,
      $.path,
      $.generic_type,
      $.option_type,
      $.function_type,
    ),

    self_type: _ => 'Self',

    generic_type: $ => seq(
      field('name', choice(alias($.identifier, $.type_identifier), $.self_type, $.path)),
      field('type_arguments', $.type_arguments),
    ),

    // A `<` joined to a name always starts type arguments (section 3.3).
    type_arguments: $ => seq(
      imm(prec(1, '<')),
      $._type,
      repeat(seq(',', $._type)),
      '>',
    ),

    _pattern: $ => choice($._simple_pattern, $.variant_pattern),

    // A pattern inside another one, where a variant pattern cannot have fields unless it is
    // parenthesized: `Shape->pair (some x) Color->red`.
    _simple_pattern: $ => choice(
      $.wildcard_pattern,
      $.binding_pattern,
      $._literal_pattern,
      $.some_pattern,
      $.parenthesized_pattern,
      alias($._unit_variant_pattern, $.variant_pattern),
    ),

    wildcard_pattern: _ => '_',

    binding_pattern: $ => $.identifier,

    some_pattern: $ => seq('some', field('pattern', $._simple_pattern)),

    parenthesized_pattern: $ => seq('(', $._pattern, ')'),

    variant_pattern: $ => prec.right(seq(
      variantHead($),
      repeat1(field('field', $._simple_pattern)),
    )),

    identifier: _ => IDENTIFIER,

    command_name: _ => /:[A-Za-z_][A-Za-z0-9_]*/,

    comment: _ => token(prec(-1, /#[^\r\n]*/)),

    doc_comment: _ => token(seq('##', /[^\r\n]*/)),
  },
});

/**
 * Items separated by `;` or line breaks, with any number of empty items: what a file, a block,
 * a body or a collection literal contains.
 *
 * @param {GrammarSymbols<string>} $
 * @param {RuleOrLiteral} rule
 * @returns {RuleOrLiteral}
 */
function statements($, rule) {
  const terminator = choice(';', $._newline);
  return seq(optional(rule), repeat(seq(terminator, optional(rule))));
}

/**
 * A call with the given head, and its arguments.
 *
 * @param {GrammarSymbols<string>} $
 * @param {RuleOrLiteral} head
 * @returns {RuleOrLiteral}
 */
function callRule($, head) {
  return prec.right(seq(
    choice(
      seq(
        field('head', $.command_name),
        optional(field('type_arguments', $.type_arguments)),
      ),
      // `[some $x]`
      field('head', alias('some', $.some)),
      field('head', head),
    ),
    repeat(field('argument', choice($._atom, $.named_argument))),
  ));
}

/**
 * `object->member`, where the `->` is joined to the object. A spaced `->` is a return type.
 *
 * @param {GrammarSymbols<string>} $
 * @param {RuleOrLiteral} object
 * @returns {RuleOrLiteral}
 */
function memberRule($, object) {
  return prec.left(seq(
    field('object', object),
    imm('->'),
    field('member', choice(
      seq($.identifier, optional(field('type_arguments', $.type_arguments))),
      $.integer,
      $.char,
      $.raw_string,
      $.string,
      $.variable,
      $.parenthesized_expression,
    )),
  ));
}

/**
 * The name, type parameters and `impl=` list of a struct, enum or trait.
 *
 * @param {GrammarSymbols<string>} $
 * @returns {RuleOrLiteral}
 */
function typeDeclarationHeader($) {
  return seq(
    field('name', $.identifier),
    optional(field('type_parameters', $.type_parameters)),
    optional(seq('impl', imm('='), field('traits', $.trait_list))),
  );
}

/**
 * `Type->variant`, with the type optionally a path or generic.
 *
 * @param {GrammarSymbols<string>} $
 * @returns {RuleOrLiteral}
 */
function variantHead($) {
  return seq(
    field('type', choice($._type_head, $.path, $.generic_type)),
    imm('->'),
    field('variant', $.identifier),
  );
}
